log
Tue 26 Mar 2024 04:11:08 PM UTC: 
 tests:  0|6
total_score: 0/70
7cabd0d
Tue 26 Mar 2024 04:15:44 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
58af559
Tue 26 Mar 2024 04:33:29 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9153a7b
Tue 26 Mar 2024 04:40:57 PM UTC: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 5/70
a0ff7eb
Tue 26 Mar 2024 04:43:01 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
6429ea4
Tue 26 Mar 2024 04:49:12 PM UTC: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|0
6de5575
Tue 26 Mar 2024 04:52:36 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
1b62e0d
